tests/golden/defaults/mimir/mimir/10_helmchart/mimir-distributed/templates/gateway/gateway-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: mimir
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mimir
    app.kubernetes.io/version: 2.7.1
    helm.sh/chart: mimir-distributed-4.3.0
  name: mimir-gateway
  namespace: syn-mimir
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: gateway
      app.kubernetes.io/instance: mimir
      app.kubernetes.io/name: mimir
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/config: b5035748fad95224d41a0b621bf5e65bd3ab3c90146f2f74e504916756d1cf9b
      labels:
        app.kubernetes.io/component: gateway
        app.kubernetes.io/instance: mimir
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: mimir
        app.kubernetes.io/version: 2.7.1
        helm.sh/chart: mimir-distributed-4.3.0
      namespace: syn-mimir
    spec:
      affinity: {}
      containers:
        - args: null
          env: null
          envFrom:
            - secretRef:
                name: mimir-metrics-store
          image: docker.io/nginxinc/nginx-unprivileged:1.22-alpine
          imagePullPolicy: IfNotPresent
          name: nginx
          ports:
            - containerPort: 8080
              name: http-metrics
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ready
              port: http-metrics
            initialDelaySeconds: 15
            timeoutSeconds: 1
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /etc/nginx
              name: nginx-config
            - mountPath: /tmp
              name: tmp
            - mountPath: /docker-entrypoint.d
              name: docker-entrypoint-d-override
      initContainers: []
      nodeSelector: {}
      securityContext:
        fsGroup: 10001
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: mimir
      terminationGracePeriodSeconds: 30
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app.kubernetes.io/component: gateway
              app.kubernetes.io/instance: mimir
              app.kubernetes.io/name: mimir
          maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
      volumes:
        - configMap:
            items:
              - key: mimir.yaml
                path: mimir.yaml
            name: mimir-config
          name: config
        - configMap:
            name: mimir-runtime
          name: runtime-config
        - configMap:
            name: mimir-gateway-nginx
          name: nginx-config
        - emptyDir: {}
          name: docker-entrypoint-d-override
        - emptyDir: {}
          name: tmp
