tests/golden/defaults/mimir/mimir/10_helmchart/mimir-distributed/templates/gateway/gateway-pdb.yaml
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: mimir
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mimir
    app.kubernetes.io/version: 2.11.0
    helm.sh/chart: mimir-distributed-5.2.2
  name: mimir-gateway
  namespace: syn-mimir
spec:
  maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: gateway
      app.kubernetes.io/instance: mimir
      app.kubernetes.io/name: mimir
