tests/golden/defaults/mimir/mimir/10_helmchart/mimir-distributed/templates/gateway/gateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: mimir
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mimir
    app.kubernetes.io/version: 2.11.0
    helm.sh/chart: mimir-distributed-5.2.2
  name: mimir-gateway
  namespace: syn-mimir
spec:
  ports:
    - name: http-metrics
      port: 80
      protocol: TCP
      targetPort: http-metrics
    - name: legacy-http-metrics
      port: 8080
      protocol: TCP
      targetPort: http-metrics
  selector:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: mimir
    app.kubernetes.io/name: mimir
  type: ClusterIP
